crates/biome_js_type_info/tests/snapshots/infer_flattened_type_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils/mod.rs
expression: content
snapshot_kind: text
---
```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

```

```
sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: "Promise" {
    extends: none
    type_args: [T -> number]
  }
}
```
