crates/biome_js_type_info/tests/snapshots/infer_resolved_type_from_direct_promise_instance.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
new Promise((resolve) => resolve("value"));

```

## Result

```
new Promise
```

## Registered types

```

Global TypeId(7) => sync Function {
  accepts: {
    params: [
      required resolve: unknown (bindings: resolve:unknown)
    ]
    type_args: []
  }
  returns: unknown reference
}

```
