crates/biome_js_type_info/tests/snapshots/infer_resolved_type_from_invocation_of_promise_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsPromise(): Promise<number> {
	return Promise.resolved(true);
}

returnsPromise();

```

## Result

```
Call Module(0) TypeId(0)(No parameters)
```

## Registered types

```
Module TypeId(0) => sync Function "returnsPromise" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}

Global TypeId(0) => instanceof Global TypeId(1)

Global TypeId(1) => instanceof Promise<T = number>
```
