crates/biome_js_type_info/tests/snapshots/infer_resolved_type_of_async_disposable_object.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const a = {
	[Symbol.asyncDispose](): void {
		// do something
	},
};

```

## Result

```
a => Object {
  prototype: No prototype
  members: [computed [Symbol.asyncDispose]: Disposable[Symbol.dispose]]
}

```

## Registered types

```
Global TypeId(0) => Object {
  prototype: No prototype
  members: [computed [Symbol.asyncDispose]: Disposable[Symbol.dispose]]
}
```
