crates/biome_js_type_info/tests/snapshots/infer_resolved_type_of_async_disposable_returning_function.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
function returnsAsyncDisposable(): AsyncDisposable {
	return {};
}

```

## Result

```
sync Function "returnsAsyncDisposable" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Global TypeId(0)
}
```

## Registered types

```
Global TypeId(0) => instanceof AsyncDisposable
```
