crates/biome_js_type_info/tests/snapshots/infer_resolved_type_of_destructured_array_element.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const [a]: Array<string> = [];

```

## Result

```
a => Global TypeId(9)[0]

```

## Registered types

```

Global TypeId(7) => string

Global TypeId(8) => Global TypeId(9)[0]

Global TypeId(9) => instanceof Array<T = Global TypeId(7)>

```
