crates/biome_js_type_info/tests/snapshots/infer_resolved_type_of_disposable_object.snap
---
source: crates/biome_js_type_info/tests/utils.rs
expression: content
---
## Input

```ts
const a = {
	[Symbol.dispose](): void {
		// do something
	},
};

```

## Result

```
a => Object {
  prototype: No prototype
  members: [computed [Symbol.dispose]: Disposable[Symbol.dispose]]
}

```

## Registered types

```
Global TypeId(0) => Object {
  prototype: No prototype
  members: [computed [Symbol.dispose]: Disposable[Symbol.dispose]]
}
```
